Added roles search
