# server/data/swagger/doc.yaml
@@ -239,6 +239,15 @@ paths:
       - "roles"
       produces:
         - application/json
+      parameters:
+      - name: name
+        in: query
+        description: role name to search. It will search for every role that contains role name parameter.
+        type: string
+      - name: permissions
+        in: query
+        description: permissions separated by comma which it will search for every role that contains at least one of them
+        type: string
       responses:
          '200':
            description: "roles response"
